--- a/feeds/package.json
+++ b/feeds/package.json
@@ -61,6 +61,7 @@
     "@types/jest": "^24.0.25",
     "cross-env": "^6.0.3",
     "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
     "redux-mock-store": "^1.5.4"
   }
 }
